--- a/AI blog app/frontend/all-blogs.html
+++ b/AI blog app/frontend/all-blogs.html
@@ -19,24 +19,37 @@
      </nav>
 
      <!-- Main content container -->
-      <div>
-        <div>
+      <div class="container mx-auto mt-10 px-4 sm:px-0">
+        <div class="max-w-3xl mx-auto bg-white p-6 rounded-lg shadow-md">
             <section>
                 <h2 class="text-xl mb-4 font-semibold ">All Blog Posts</h2>
                 <div class="space-y-4">
                     <div class="border border-gray-300 p-4 rounded-lg">
-                        <h3>
+                        <h3 class="text-lg font-semibold">
                             Blog Post Title 1
                         </h3>
                         <p>
                             This is the content of the blog post. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eius perferendis, necessitatibus culpa, hic aliquid ex omnis non eveniet incidunt corrupti sequi. Suscipit velit molestias repellat, omnis assumenda accusantium illum?
                         </p>
                     </div>
+                    <div class="border border-gray-300 p-4 rounded-lg">
+                        <h3 class="text-lg font-semibold">
+                            Blog Post Title 2
+                        </h3>
+                        <p>
+                            This is the content of the blog post. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum eius perferendis, necessitatibus culpa, hic aliquid ex omnis non eveniet incidunt corrupti sequi. Suscipit velit molestias repellat, omnis assumenda accusantium illum?
+                        </p>
+                    </div>
+                    <!-- Repeat -->
 
                 </div>
             </section>
              
         </div>
       </div>
+
+     <footer class="text-center p-4 text-black mt-6">
+        Powered by <a href="https://youtu.be/_IC6wEt6KRc?si=wxnchjKrTafVJK4Z">Code with Tomi</a>
+     </footer>
 </body>
 </html>
